# snakecharm

./: .gitignore  README.md  package-lock.json  package.json
src/: App.svelte  main.ts  stores.js  styles.css
src-python/: backend-x86_64-pc-windows-msvc.spec  backend.py  backend.spec  readme.md
src-python/resources/: pp.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: PyIngest.svelte  PyRandom.svelte  Pyadd.svelte  Pyver.svelte  TitleBar.svelte
